Attempt at fixing invisible icons in Safari

--- a/www/style-dark.linux.css
+++ b/www/style-dark.linux.css
@@ -4151,6 +4151,12 @@ h1.listing + .post-meta .read-time::before {
 	margin: 0 8px 0 0;
 	box-shadow: 0 0 0 2px #1f1f1f;
 }
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .karma-value::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .comment-count::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .lw2-link::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .read-time::before {
+	text-shadow: 0 0 3px #575756;
+}
 
 h1.listing + .post-meta .karma {
 	margin: 0;
