--- a/www/style.mac.css
+++ b/www/style.mac.css
@@ -4151,6 +4151,12 @@ h1.listing + .post-meta .read-time::before {
 	margin: 0 8px 0 0;
 	box-shadow: 0 0 0 2px #ddd;
 }
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .karma-value::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .comment-count::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .lw2-link::before,
+_::-webkit-full-page-media, _:future, :root h1.listing + .post-meta .read-time::before {
+	text-shadow: 0 0 3px #999;
+}
 
 h1.listing + .post-meta .karma {
 	margin: 0;
